--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -17,10 +17,10 @@
                 </p>
 
                 <div class="actions">
-                    <a class="action hvr-buzz" href="{{ path('run', { application: 'slack' }) }}">
+                    <a class="action hvr-buzz action-slack" href="{{ path('run', { application: 'slack' }) }}">
                         <i class="custom-fa-slack"></i> Run on Slack
                     </a>
-                    <a class="action hvr-buzz" href="{{ path('run', { application: 'discord' }) }}">
+                    <a class="action hvr-buzz action-discord" href="{{ path('run', { application: 'discord' }) }}">
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
                 </div>
