--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -12,8 +12,8 @@
         <link rel="shortcut icon" href="/favicon.ico?v=2">
         <meta name="apple-mobile-web-app-title" content="Secret Santa">
         <meta name="application-name" content="Secret Santa">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#E03A4D">
+        <meta name="msapplication-TileColor" content="#ee3737">
+        <meta name="theme-color" content="#ee3737">
 
         <meta name="slack-app-id" content="AP0Q2FLEB">
 
