--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -71,7 +71,9 @@
                     <br>
                     Hosted gracefully by the awesome people at <a href="https://www.clever-cloud.com/">Clever Cloud</a>.
                     <br>
-                    Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>.
+                    Logo lovely crafted by <a href="https://twitter.com/coucou__alex">Alexandre Godreau</a>.
+                    <br>
+                    Emoji provided by <a href="https://www.emojione.com/">Emoji One</a>.
                     <br>
                     Sharing gifts since 2015.
                 </p>
