Clarify Discord privacy error

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -97,7 +97,7 @@
                             <img src="{{ asset('images/discord-privacy-settings.gif') }}" alt="How to change the privacy settings on Discord" />
                         </div>
                         <p>
-                            Once they made the change, you can safely retry to send the messages. When the draw is finished,
+                            Once they made the change, you can safely retry to send the remaining messages. When the draw is finished,
                             they can of course re-disable this setting as they wish.
                         </p>
                     </li>
