--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -23,6 +23,9 @@
                     <a class="action hvr-buzz action-discord" href="{{ path('run', { application: 'discord' }) }}">
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
+                    <a class="action hvr-buzz action-zoom" href="{{ path('run', { application: 'zoom' }) }}">
+                        <i class="custom-fa-zoom"></i> Run on Zoom Chat <sup>beta</sup>
+                    </a>
                 </div>
             </div>
         </div>
