--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -24,7 +24,7 @@
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
                     <a class="action hvr-buzz action-zoom" href="{{ path('run', { application: 'zoom' }) }}">
-                        <i class="custom-fa-zoom"></i> Run on Zoom Chat <sup>beta</sup>
+                        <i class="custom-fa-zoom"></i> Run on Zoom <sup>beta</sup>
                     </a>
                 </div>
             </div>
