--- a/templates/santa/application/run_zoom.html.twig
+++ b/templates/santa/application/run_zoom.html.twig
@@ -4,8 +4,23 @@
 
 {% import _self as current %}
 
+{% block content %}
+    <div class="run-block" style="margin-bottom: 0;">
+        <p class="error" style="width: 80%; margin: 10px auto; text-align: center;">
+            Please be aware that Zoom.us support is in beta right now.<br>
+            Also, the Linux Zoom client does not display messages correctly.<br>
+            Help us by reporting any suspicious behavior <a href="https://github.com/jolicode/secret-santa">on Github</a>!
+        </p>
+    </div>
+
+    {{ parent() }}
+{% endblock content %}
+
 {% macro userSummary(user) %}
     <span class="user-summary">
+        {% if user.extra.image %}
+            <img src="{{ user.extra.image }}" alt="" />
+        {% endif %}
         <span>{{ user.name }}</span>
         <span data-uncheck-user="user-{{ user.identifier }}" class="fas fa-times" title="Unselect this user"></span>
     </span>
@@ -24,6 +39,9 @@
                id="user-{{ user.identifier }}"
                data-summary="{{ current.userSummary(user)|escape('html_attr') }}"
         >
+        {% if user.extra.image %}
+            <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
+        {% endif %}
         <span>{{ user.name }}</span>
         {% if groups %}
             <span class="user-groups">
