Add tests, fix some todo, better wording

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -60,14 +60,14 @@
                         </h3>
                         <p>
                             There is a 2 things to understand here. The first step in our application is to retrieve
-                            all the users on your Slack workspace / Discord server - yes we retrieve all the users to allow
-                            you to select the ones that will participate to your Secret Santa.
+                            all the users on your Slack workspace / Discord server / Zoom.us Chat - yes we retrieve
+                            all the users to allow you to select the ones that will participate to your Secret Santa.
                         </p>
                         <p>
-                            When your team is really big, Slack or Discord APIs can fail to send us all the users in a
+                            When your team is really big, Slack, Discord or Zoom.us APIs can fail to send us all the users in a
                             reasonable duration. That means you will no be able to start a Secret Santa. A
-                            possible workaround would be to create a new Slack workspace / Discord server with only the
-                            participants.
+                            possible workaround would be to create a new Slack workspace / Discord server / Zoom.us Chat
+                            with only the participants.
                         </p>
                         <p>
                             The second step is to dispatch a private message to all the selected users. Even if you started
