--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -24,7 +24,8 @@
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
                     <a class="action hvr-buzz action-zoom" href="{{ path('run', { application: 'zoom' }) }}">
-                        <i class="custom-fa-zoom"></i> Run on Zoom <sup>beta</sup>
+                        <i class="custom-fa-zoom"></i> Run on Zoom
+                        <sup style="position:absolute;top:8px;right:4px;font-size: 0.6em;">beta</sup>
                     </a>
                 </div>
             </div>
