--- a/templates/santa/application/run_zoom.html.twig
+++ b/templates/santa/application/run_zoom.html.twig
@@ -9,7 +9,8 @@
         <p class="error" style="width: 80%; margin: 10px auto; text-align: center;">
             Please be aware that Zoom.us support is in beta right now.<br>
             Also, the Linux Zoom client does not display messages correctly.<br>
-            Help us by reporting any suspicious behavior <a href="https://github.com/jolicode/secret-santa">on Github</a>!
+            Help us by reporting any suspicious behavior <a href="https://github.com/jolicode/secret-santa">on Github</a>
+            or via <a href="mailto:hello@secret-santa.team">email</a>!
         </p>
     </div>
 
