--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,13 @@ a {
     max-width: 100%;
     height: auto;
 }
+.img-border {
+    padding: 15px 15px 0;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+    -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
+    -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+}
 .is-center {
     text-align: center;
 }
