--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -50,7 +50,7 @@
                         </div>
 
                         <p>
-                            You can (not required) add a custom message that will be sent along the Secret Santa draw.
+                            Optionally, you can add a custom message that will be sent along the Secret Santa draw.
                         </p>
 
                         <p>
