--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -65,7 +65,7 @@
             <footer class="footer is-center {% block footerClass %}{% endblock %}">
                 {% block contact %}
                     <a href="{{ path('faq') }}" class="support-link"><i class="fas fa-question"></i> Help</a>
-                    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
+                    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="far fa-life-ring"></i> Contact us!</a>
                 {% endblock contact %}
                 <p>
                     This free service to share the santa spirit is made with ♥ by <a href="https://jolicode.com">JoliCode</a>.
